logs/vacuum.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cattle'...
Listing './lib/python3.5/site-packages/cattle_qiniu-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/vacuum'...
Listing './lib/python3.5/site-packages/vacuum/third_party'...
Listing './lib/python3.5/site-packages/vacuum/third_party/submail'...
Compiling './lib/python3.5/site-packages/vacuum/third_party/submail/address_book_mail_subscribe.py'...
***   File "./lib/python3.5/site-packages/vacuum/third_party/submail/address_book_mail_subscribe.py", line 26
    print addressbook.subscribe()
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vacuum/third_party/submail/address_book_mail_unsubscribe.py'...
***   File "./lib/python3.5/site-packages/vacuum/third_party/submail/address_book_mail_unsubscribe.py", line 26
    print addressbook.unsubscribe()
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vacuum/third_party/submail/address_book_message_subscribe.py'...
***   File "./lib/python3.5/site-packages/vacuum/third_party/submail/address_book_message_subscribe.py", line 26
    print addressbook.subscribe()
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vacuum/third_party/submail/address_book_message_unsubscribe.py'...
***   File "./lib/python3.5/site-packages/vacuum/third_party/submail/address_book_message_unsubscribe.py", line 26
    print addressbook.unsubscribe()
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vacuum/third_party/submail/mail_send_demo.py'...
***   File "./lib/python3.5/site-packages/vacuum/third_party/submail/mail_send_demo.py", line 97
    print submail.send()
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vacuum/third_party/submail/mail_xsend_demo.py'...
***   File "./lib/python3.5/site-packages/vacuum/third_party/submail/mail_xsend_demo.py", line 79
    print submail.xsend()
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vacuum/third_party/submail/message_xsend_demo.py'...
***   File "./lib/python3.5/site-packages/vacuum/third_party/submail/message_xsend_demo.py", line 41
    print submail.xsend()
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vacuum-0.3.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
